--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav-title">
             <h3>G3 Architects</h3>
             <ul>
                 <li><a href="">home</a></li>
@@ -17,6 +17,14 @@
                 <li><a href="">login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-contant">
+                <h1 class="banner-tittle">Brand new group of Architects</h1>
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus harum architecto iste ducimus? Tempora est nemo officia animi voluptates similique quibusdam alias quod. Quo voluptates eum animi repellendus eveniet ex?</p>
+            <button class="button-primary">Explore more</button>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
