--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
         </div>
     </header>
     <main>
-
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h2 class="teams-tittle"> <span class="Quick-list">Quick list</span> <span>of our</span> <span class="text-features">features</span></h2>
+                <p class="teams-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, dolorum nihil veniam optio quas ipsa, aliquam nobis maiores quisquam ad, vitae iure? Totam, voluptates! Labore, obcaecati hic. Aspernatur, nobis assumenda?</p>
+                <button class="button-primary">Explore more</button>
+            </div>
+        </section>
     </main>
     <footer>
 
