started shared css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav class="nav-title">
+        <nav class="section-tittle">
             <h3>G3 Architects</h3>
             <ul>
                 <li><a href="">home</a></li>
@@ -20,7 +20,7 @@
         <div class="banner">
             <div class="banner-contant">
                 <h1 class="banner-tittle">Brand new group of Architects</h1>
-            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus harum architecto iste ducimus? Tempora est nemo officia animi voluptates similique quibusdam alias quod. Quo voluptates eum animi repellendus eveniet ex?</p>
+            <p class="text-light-gry">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus harum architecto iste ducimus? Tempora est nemo officia animi voluptates similique quibusdam alias quod. Quo voluptates eum animi repellendus eveniet ex?</p>
             <button class="button-primary">Explore more</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -35,10 +35,17 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                <h2 class="teams-tittle"> <span class="Quick-list">Quick list</span> <span>of our</span> <span class="text-features">features</span></h2>
-                <p class="teams-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, dolorum nihil veniam optio quas ipsa, aliquam nobis maiores quisquam ad, vitae iure? Totam, voluptates! Labore, obcaecati hic. Aspernatur, nobis assumenda?</p>
+                <h2 class="teams-tittle"> <span class="Quick-list text-light-gry">Quick list</span> <span>of our</span> <span class="text-features">features</span></h2>
+                <p class="text-light-gry">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, dolorum nihil veniam optio quas ipsa, aliquam nobis maiores quisquam ad, vitae iure? Totam, voluptates! Labore, obcaecati hic. Aspernatur, nobis assumenda?</p>
                 <button class="button-primary">Explore more</button>
             </div>
+        </section>
+        <section>
+
+        </section>
+        <section>
+            <h3 class="section-tittle">some facts</h3>
+            <p class="text-light-gry">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia perferendis expedita, tempore, illum molestias nobis deleniti error hic non excepturi porro tenetur cupiditate voluptatibus velit amet quidem sit dignissimos harum.</p>
         </section>
     </main>
     <footer>
