end of fex-card-container

--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
         <section>
             <h3 class="section-tittle">some facts</h3>
             <p class="text-light-gry">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia perferendis expedita, tempore, illum molestias nobis deleniti error hic non excepturi porro tenetur cupiditate voluptatibus velit amet quidem sit dignissimos harum.</p>
+            <div class="fex-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-tittle text-light-gry">Awards winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-tittle text-light-gry">project finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-tittle text-light-gry">clients worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-tittle text-light-gry">Email send</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
